Adding h1 and paragraph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>testRepoDistant</title>
 </head>
 <body>
-    
+    <h1>This is a practice for WCS</h1>
+    <p>I have to complete my quests before tomorrow</p>
 </body>
 </html>
